# orders-agent

./: .gitignore  README.md  experiment.md  qualitative_testing.md
agent/: mcp_agent.config.yaml  pyproject.toml  run_agent.py  run_tests.py
agent/static/: index.html
customer-orders/: main.py  pyproject.toml  server.py
mcp-customer-orders/: main.py  pyproject.toml  server.py
orders-api/: .env  openapi.yaml  package.json  tsconfig.json
orders-api/src/: index.ts
orders-api/src/lib/: db.ts  policy.ts  types.ts
orders-api/src/middleware/: errors.ts  idemopotency.ts  logger.ts
orders-api/src/routes/: orders.ts
